# code_benchLLM

./: .gitignore  main.py  pyproject.toml
notebooks/: Annotation_Similarity.ipynb  Annotation_Similarity_Owl.ipynb  CellTypist_Annotations.ipynb  Cell_Ontology_CSV_Generation.ipynb  Similarity_LLMs_vs_LLMs.ipynb  template.ipynb
notebooks/.ipynb_checkpoints/: query-checkpoint.json
