[project]
name = "code-benchllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celltypist>=1.6.3",
    "cytetype>=0.1.4",
    "jupyterlab>=4.4.2",
    "networkx>=3.4.2",
    "obonet>=1.1.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scanpy>=1.11.1",
    "scipy>=1.15.3",
    "session-info>=1.0.1",
]
